# mc-packet-emulator

./: .gitignore  Cargo.toml
src/: connection.rs  main.rs
src/auth/: mod.rs
src/connection/: conn_reader.rs  connection.rs  connection_packet_handler.rs  connection_state.rs  mod.rs
src/protocol/: mod.rs
src/protocol/crypto/: encrypted_stream.rs  mod.rs
src/protocol/fields/: boolean.rs  byte.rs  byte_array.rs  double.rs  entity_property.rs  float.rs  gameprofile.rs  int.rs  item_stack.rs  long.rs  mod.rs  properties.rs  short.rs  unimplemented.rs  ushort.rs  uuid.rs  varint.rs  varstring.rs  vec.rs
src/protocol/io/: mod.rs
src/protocol/macros/: mod.rs  packet.rs  packet_field.rs
src/protocol/packets/: client.rs  decoder.rs  handshake.rs  login.rs  mod.rs  play.rs  server.rs
src/protocol/ping/: mod.rs
src/protocol/query/: mod.rs
