[package]
name = "mc-packet-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rsa = "0.7"
rand = { version = "0.8", features = ["std"] }
aes = "0.7"
cfb8 = "0.7"
async-trait = "0.1"
flate2 = "1.0.35"
luna_nbt = "0.0.3"
time = "0.3.37"
paste = "1.0.15"
hex = "0.4.3"
serde_json = "1.0.139"
reqwest = { version = "0.12.12", features = ["json"] }
sha1 = "0.10.6"


[dependencies.uuid]
version = "1.13.2"
features = [
    "v4"
]
